--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.6",
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "astro": "^5.17.2"
   },
   "devDependencies": {
     "@astrojs/react": "^4.4.2",
