--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "astro": "^5.17.2"
   },
   "devDependencies": {
+    "astro-font": "^1.1.0",
     "@astrojs/react": "^4.4.2",
-    "@tailwindcss/vite": "^4.2.1",
     "@tailwindcss/postcss": "^4.2.1",
+    "@tailwindcss/vite": "^4.2.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.2.1"
   }
