chore: format code and add biome configuration for linting and formatting

--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "opeconexp_web",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^5.17.2"
-  },
-  "devDependencies": {
-    "astro-font": "^1.1.0",
-    "@astrojs/react": "^4.4.2",
-    "@tailwindcss/postcss": "^4.2.1",
-    "@tailwindcss/vite": "^4.2.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.2.1"
-  }
+	"name": "opeconexp_web",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"lint": "biome lint --write .",
+		"lint:fix": "biome check --write ."
+	},
+	"dependencies": {
+		"astro": "^5.17.2"
+	},
+	"devDependencies": {
+		"@astrojs/react": "^4.4.2",
+		"@biomejs/biome": "2.4.4",
+		"@tailwindcss/postcss": "^4.2.1",
+		"@tailwindcss/vite": "^4.2.1",
+		"astro-font": "^1.1.0",
+		"postcss": "^8.5.6",
+		"tailwindcss": "^4.2.1"
+	}
 }
